// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select[Base] should render correctly  1`] = `
<div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about absolute 1`] = `
<div
  style="padding: 10px; height: 100px; width: 100%; overflow: hidden;"
>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 120px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              default
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable c-huobef soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px; margin-left: 16px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select user
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about autoAdapt 1`] = `
<div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about big data 1`] = `
<div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Tag
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about create 1`] = `
<div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable c-huobef soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about custom render 1`] = `
<div
  style="display: flex; gap: 24px; flex-wrap: wrap;"
>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about custom result 1`] = `
<div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about custom unmatch 1`] = `
<div>
  <div
    class="c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-pjllh2 soui-select-ellipsis"
          >
            I am redddd color
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
    <span
      class="cdr6w5p soui-select-clear-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM9.7845 8.38125C9.39221 8.07623 8.82498 8.10396 8.46449 8.46444C8.07397 8.85497 8.07397 9.48813 8.46449 9.87866L10.5846 11.9995L8.46449 14.1213L8.3813 14.2155C8.07628 14.6078 8.10401 15.175 8.46449 15.5355C8.85502 15.926 9.48818 15.926 9.87871 15.5355L11.9996 13.4136L14.1213 15.5355L14.2156 15.6187C14.6078 15.9237 15.1751 15.896 15.5356 15.5355C15.9261 15.145 15.9261 14.5118 15.5356 14.1213L13.4136 11.9995L15.5356 9.87866L15.6187 9.78445C15.9238 9.39216 15.896 8.82493 15.5356 8.46444C15.145 8.07392 14.5119 8.07392 14.1213 8.46444L11.9996 10.5845L9.87871 8.46444L9.7845 8.38125Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about disabled 1`] = `
<div
  style="display: flex; flex-wrap: wrap; gap: 24px; width: 624px;"
>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cufrzyu soui-select-wrapper-disabled cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="-1"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="c-tj2bpi soui-select-wrapper cufrzyu soui-select-wrapper-disabled cdrm70u soui-select-clearable c-huobef soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="-1"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper cd43w9 soui-select-compressed-wrapper c-7vjtar soui-select-multiple-result-wrapper c-7a22yf soui-select-multiple-compressed-wrapper"
        >
          <div
            class="c9p1dj5 soui-select-tag cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright c-j04p53 soui-tag-disabled"
            data-soui-type="dark"
            style="opacity: 1;"
          >
            <div
              class="c-6g68ga soui-tag-wrapper c4kb4eu soui-tag-inline"
            >
              <span
                class="c-oi8krg soui-tag-container"
              >
                red
              </span>
            </div>
            <div
              class="c-pp0r9o soui-tag-close-icon"
            >
              <span
                class="c98mzgf soui-tag-close-icon-wrapper"
              >
                <svg
                  height="10"
                  viewBox="0 0 10 10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="c9p1dj5 soui-select-tag cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright c-j04p53 soui-tag-disabled"
            data-soui-type="dark"
            style="opacity: 1;"
          >
            <div
              class="c-6g68ga soui-tag-wrapper c4kb4eu soui-tag-inline"
            >
              <span
                class="c-oi8krg soui-tag-container"
              >
                orange
              </span>
            </div>
            <div
              class="c-pp0r9o soui-tag-close-icon"
            >
              <span
                class="c98mzgf soui-tag-close-icon-wrapper"
              >
                <svg
                  height="10"
                  viewBox="0 0 10 10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <span
            style="display: inline-flex;"
          >
            <div
              class="c9p1dj5 soui-select-tag cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright"
              style="position: absolute; z-index: -100; user-select: none; contain: layout; opacity: 0; pointer-events: none;"
            >
              <span
                class="c-6g68ga soui-tag-wrapper"
              >
                +
              </span>
            </div>
            <noscript />
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable c-huobef soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper cd43w9 soui-select-compressed-wrapper c-7vjtar soui-select-multiple-result-wrapper c-7a22yf soui-select-multiple-compressed-wrapper"
        >
          <div
            class="c9p1dj5 soui-select-tag cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright"
            style="opacity: 1;"
          >
            <div
              class="c-6g68ga soui-tag-wrapper c4kb4eu soui-tag-inline"
            >
              <span
                class="c-oi8krg soui-tag-container"
              >
                red
              </span>
            </div>
            <div
              class="c-pp0r9o soui-tag-close-icon"
            >
              <span
                class="c98mzgf soui-tag-close-icon-wrapper"
              >
                <svg
                  height="10"
                  viewBox="0 0 10 10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="c9p1dj5 soui-select-tag cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright c-j04p53 soui-tag-disabled"
            style="opacity: 1;"
          >
            <div
              class="c-6g68ga soui-tag-wrapper c4kb4eu soui-tag-inline"
            >
              <span
                class="c-oi8krg soui-tag-container"
              >
                orange
              </span>
            </div>
            <div
              class="c-pp0r9o soui-tag-close-icon"
            >
              <span
                class="c98mzgf soui-tag-close-icon-wrapper"
              >
                <svg
                  height="10"
                  viewBox="0 0 10 10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <span
            style="display: inline-flex;"
          >
            <div
              class="c9p1dj5 soui-select-tag cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright"
              style="position: absolute; z-index: -100; user-select: none; contain: layout; opacity: 0; pointer-events: none;"
            >
              <span
                class="c-6g68ga soui-tag-wrapper"
              >
                +
              </span>
            </div>
            <noscript />
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
        />
      </svg>
    </span>
    <span
      class="cdr6w5p soui-select-clear-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM9.7845 8.38125C9.39221 8.07623 8.82498 8.10396 8.46449 8.46444C8.07397 8.85497 8.07397 9.48813 8.46449 9.87866L10.5846 11.9995L8.46449 14.1213L8.3813 14.2155C8.07628 14.6078 8.10401 15.175 8.46449 15.5355C8.85502 15.926 9.48818 15.926 9.87871 15.5355L11.9996 13.4136L14.1213 15.5355L14.2156 15.6187C14.6078 15.9237 15.1751 15.896 15.5356 15.5355C15.9261 15.145 15.9261 14.5118 15.5356 14.1213L13.4136 11.9995L15.5356 9.87866L15.6187 9.78445C15.9238 9.39216 15.896 8.82493 15.5356 8.46444C15.145 8.07392 14.5119 8.07392 14.1213 8.46444L11.9996 10.5845L9.87871 8.46444L9.7845 8.38125Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about filter 1`] = `
<div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about format 1`] = `
<div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about group 1`] = `
<div
  class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
  data-soui-input-border="true"
  style="width: 240px;"
  tabindex="0"
>
  <div
    class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
  >
    <div
      class="cq9zs7q soui-select-result"
    >
      <div
        class="cst20xc soui-select-result-text-wrapper"
      >
        <span
          class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
        >
          <span>
            Select a city
          </span>
        </span>
      </div>
    </div>
  </div>
  <span
    class="cht0tmx soui-select-arrow-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
      />
    </svg>
  </span>
</div>
`;

exports[`Select[Base] should render correctly about inner title 1`] = `
<div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cqnzf5o soui-select-wrapper-inner-title cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="c-o6szqp soui-inner-title-wrapper"
      >
        <div
          class="c4kxj2s soui-inner-title-title cv1qspd soui-inner-title-top"
        >
          Select Color
        </div>
        <div
          class="c4irvcz soui-inner-title-place"
        >
          <div
            class="c4kxj2s soui-inner-title-title"
          >
            Select Color
          </div>
        </div>
        <div
          class="c-yu7nrf soui-inner-title-content"
        >
          <div
            class="cq9zs7q soui-select-result"
          >
            <div
              class="cst20xc soui-select-result-text-wrapper"
            >
              <div
                class="ccborcd soui-select-space"
              >
                 
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about loading 1`] = `
<div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about max length 1`] = `
<div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about max length more 1`] = `
<div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about multiple 1`] = `
<div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable c-huobef soui-select-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about size 1`] = `
<div
  style="display: flex; gap: 24px; align-items: center;"
>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper c9ibv1p soui-select-wrapper-small cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 240px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 240px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper c9e9zj5 soui-select-wrapper-large cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 240px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about tree 1`] = `
<div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 260px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Select[Base] should render correctly about tree more 1`] = `
<div>
  <div
    class="c9an22b soui-select-wrapper-empty c-tj2bpi soui-select-wrapper cdrm70u soui-select-clearable"
    data-soui-input-border="true"
    style="width: 260px;"
    tabindex="0"
  >
    <div
      class="c-iqm4mb soui-select-result-wrapper cepilzo soui-select-wrapper-padding-box c3p8bi1 soui-select-wrapper-inner-title-top c3y3vev soui-select-wrapper-inner-title-bottom"
    >
      <div
        class="cq9zs7q soui-select-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Select Color
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cht0tmx soui-select-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;
